// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LineageGrid/> loading 1`] = `
<div
  className="lineage-grid-display"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="table-responsive"
      >
        <div
          className="grid-messages"
        />
        <table
          className="table table-striped table-bordered table-condensed"
        >
          <thead>
            <tr>
              <th
                className="grid-header-cell"
                draggable={false}
                id="name"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "270px",
                  }
                }
              >
                ID
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="distance"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "60px",
                  }
                }
              >
                Distance
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="lsid"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "70px",
                  }
                }
              >
                Change Seed
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="displayType"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Type
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="date"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Creation Date
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="description"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Description
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="label"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Alias
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="grid-loading"
            >
              <td
                colSpan={7}
              >
                Loading...
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    className="lineage-grid-generation-limit-msg"
  >
    Note: Showing a maximum of 
    5
     generations
     from the seed node
    .
  </div>
</div>
`;

exports[`<LineageGrid/> with data 1`] = `
<div
  className="lineage-grid-display"
>
  <div
    className="row bottom-spacing"
  >
    <div
      className="col-sm-4"
    >
      <div
        className="text-nowrap"
      >
        <a
          className="btn btn-success"
          href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3&distance=5&members=parents"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          Show Parents
        </a>
        <span
          style={
            {
              "margin": "0 10px",
            }
          }
        >
          <a
            className="btn btn-success disabled"
            href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3&distance=5&members=children"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              {
                "pointerEvents": "none",
              }
            }
            tabIndex={-1}
          >
            Show Children
          </a>
        </span>
      </div>
    </div>
    <div
      className="text-center col-sm-4 lineage-seed-info"
    >
      Showing 
      children
       from seed:
      <span
        className="lineage-seed-name"
      >
        Hgb3.3
      </span>
    </div>
    <div
      className="col-sm-4"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="paging pull-right text-nowrap"
        >
          <span
            className="paging-counts-without-buttons"
            data-max={10}
            data-min={1}
            data-total={10}
          >
            <span>
              1
               - 
              10
            </span>
             
            of 
            10
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="table-responsive"
      >
        <div
          className="grid-messages"
        />
        <table
          className="table table-striped table-bordered table-condensed"
        >
          <thead>
            <tr>
              <th
                className="grid-header-cell"
                draggable={false}
                id="name"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "270px",
                  }
                }
              >
                ID
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="distance"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "60px",
                  }
                }
              >
                Distance
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="lsid"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "70px",
                  }
                }
              >
                Change Seed
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="displayType"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Type
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="date"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Creation Date
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="description"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Description
              </th>
              <th
                className="grid-header-cell"
                draggable={false}
                id="label"
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "minWidth": "150px",
                  }
                }
              >
                Alias
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="grid-row-alternate"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "0px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6814"
                  >
                    Hgb3.3
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-success"
                    >
                      Seed
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                0
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:15
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "10px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6816"
                  >
                    Hgb3.3.1
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-info"
                    >
                      1st 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="1 generation below seed"
                >
                  1
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1&distance=5&members=children"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Children for Hgb3.3.1"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:20
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row-alternate"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6818"
                  >
                    Hgb3.3.1.1
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.1&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.1"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6820"
                  >
                    Hgb3.3.1.3
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.3&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.3"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row-alternate"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6819"
                  >
                    Hgb3.3.1.2
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.2&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.2"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6822"
                  >
                    Hgb3.3.1.5
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.5&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.5"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row-alternate"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6821"
                  >
                    Hgb3.3.1.4
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.4&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.4"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6824"
                  >
                    Hgb3.3.1.7
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.7&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.7"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row-alternate"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "20px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6823"
                  >
                    Hgb3.3.1.6
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-primary"
                    >
                      2nd 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="2 generations below seed"
                >
                  2
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.1.6&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.1.6"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:22
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
            <tr
              className="grid-row"
            >
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="lineage-name"
                  style={
                    {
                      "textIndent": "10px",
                    }
                  }
                  title=""
                >
                  <a
                    href="#/rd/samples/6817"
                  >
                    Hgb3.3.2
                  </a>
                  <span
                    className="pull-right show-on-hover"
                  >
                    <span
                      className="label label-info"
                    >
                      1st 
                      child
                    </span>
                  </span>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <span
                  title="1 generation below seed"
                >
                  1
                </span>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                <div
                  className="text-nowrap"
                >
                  <a
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    href="#/lineage?seeds=urn%3Alsid%3Alabkey.com%3ASample.61.Hemoglobin%3AHgb3.3.2&distance=5&members=parents"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    title="Parents for Hgb3.3.2"
                  >
                    <span
                      className="fa fa-arrow-up"
                    />
                  </a>
                  <span
                    style={
                      {
                        "paddingRight": "5px",
                      }
                    }
                  >
                     
                  </span>
                  <button
                    className="lineage-btn-seed btn btn-xs btn-primary"
                    disabled={true}
                    type="button"
                  >
                    <span
                      className="fa fa-arrow-down"
                    />
                  </button>
                </div>
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                Hemoglobin
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              >
                2020-03-30 14:20
              </td>
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
              <td
                style={
                  {
                    "textAlign": "left",
                  }
                }
              />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    className="lineage-grid-generation-limit-msg"
  >
    Note: Showing a maximum of 
    5
     generations
     from Hgb3.3
    .
  </div>
</div>
`;
